--- a/Orcamento/style.css
+++ b/Orcamento/style.css
@@ -1,13 +1,28 @@
-.tabelaProduto table, th, td {
+
+#tabelaFuncionario #tabelaCidade #tabelaProfissao table, th, td {
     border: 1px solid black;
 }
-.tabelaProduto{
+
+#tabelaFuncionario #tabelaCidade #tabelaProfissao{
     width: 700px;
 
 }
 
+nav{
+    height: 900px;
+    width: 23%;
+    float: left;
+    background-color: #eee;
+    margin-right: 20px;
+}
 
-input{
-    width: 150px;
-    margin-bottom: 5px;
+nav ul li{
+    display: inline;
+    padding: 15px 10px;
+    color: #fff;
+}
+
+nav ul li button{
+    height: 40px;
+    width: 100px;
 }
